--- a/Back/src/ProEvents.API/appsettings.Development.json
+++ b/Back/src/ProEvents.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLite": "Data Source=ProEvents.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
