--- a/Front/ProEvents-App/package.json
+++ b/Front/ProEvents-App/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^4.6.2",
     "ngx-bootstrap": "^7.0.0",
+    "ngx-spinner": "^11.0.2",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
