Reactive form with formControl (verbose mode)

--- a/Front/ProEvents-App/tsconfig.json
+++ b/Front/ProEvents-App/tsconfig.json
@@ -16,10 +16,12 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"],
+    /*esse paths serve pra gente substituir algumas coisas nas importações e dx mais "elegante"*/
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@environments/*": ["src/environments/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
