--- a/Back/src/ProEvents.Application/ProEvents.Application.csproj
+++ b/Back/src/ProEvents.Application/ProEvents.Application.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\ProEvents.Persistence\ProEvents.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+  </ItemGroup>
+
 </Project>
